<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.ForgotPassword">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:transitionName="logo_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/hello_there"
        android:textColor="@color/dark_blue"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/email"
        android:transitionName="email_box">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendresetbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:text="@string/send_password_reset_link"
        android:textColor="@color/white"
        android:transitionName="sign_in_btn" />


</LinearLayout>