<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Discussion.AddDiscussionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/about" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toEndOf="@+id/about">

        </Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_marginEnd="5dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/discuss"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginEnd="5dp"
            android:gravity="top"
            android:hint="@string/discuss">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editdiscuss"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="14" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/adddiscussbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/discuss"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/dark_blue"
            android:text="@string/add_for_discussion" />
    </RelativeLayout>

</FrameLayout>