<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOutSchoolCourse"
    android:padding="17dp">


        <VideoView
            android:layout_marginTop="17dp"
            android:id="@+id/videopreview"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/videopreview"
            android:layout_marginEnd="5dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginEnd="5dp"
            android:gravity="top"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editdescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="7" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnaddvideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/add_video"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnaddoutcourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnaddvideo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/add_course"
            android:textColor="@color/white" />

</RelativeLayout>